# hallucination

./: .gitignore  CMakeLists.txt  Makefile  README  audio.cc  audio.h  controller.cc  controller.h  debug.h  hair.cc  hair.h  hallucination.cc  hallucination.h  main.cc  obj_reader.cc  obj_reader.h  visualizer.cc  visualizer.h  wookie_glfw.cc
common/: controls.cpp  controls.hpp  obj_reader.h
models/: cody.mtl  cody_clothed.mtl  cody_wearing_shirt.mtl
scripts/: install_libs.sh  simplify_obj.py
